[tool.poetry]
name = "weather_cases"
version = "0.1.0"
description = ""
authors = ["Jim Tang <jim.z.tang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastapi = "^0.112.0"
thefuzz = "^0.22.1"
uvicorn = {version = "^0.30.5", extras = ["standard"]}
xarray = "^2024.7.0"
pydap = "^3.5"
matplotlib = "^3.9.2"
geojson = "^3.1.0"
cftime = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
